package calendarappointment.model;

public enum ReminderMethod {
    NONE,
    POPUP,
    EMAIL,
    SMS
}
